# P7-scalable

./: README.md
dating/: .gitignore  Dockerfile  dating.cabal  docker-compose.yml  emptyDatabase.sh  package.yaml  seedDatabase.sh  stack.yaml  whodunit.sh
dating/app/: Main.hs
dating/cofil-haskel/: package.yaml
dating/cofil-haskel/app/: Main.hs
dating/cofil-haskel/src/: CollaborativeFiltering.hs  Question.hs  TestColFil.hs
dating/cofill-haskell/: .gitignore  ChangeLog.md  README.md  data-small.json  package.yaml
dating/cofill-haskell/app/: Main.hs
dating/cofill-haskell/src/: CollaborativeFiltering.hs  DataLoad.hs  DataTransformation.hs  ReadData.hs  TestColFil.hs  TestData.hs
dating/data/: anonymous.csv  correlations.csv
dating/docker/caddy/: Caddyfile
dating/docker/dating/: Dockerfile
dating/docker/elm/: Dockerfile  onchange
dating/docker/nginx/: nginx.conf
dating/frontend/: .gitignore  elm-package.json  elm.json  index.html  main.dev.js  main.js  main.prod.js  optimize.sh
dating/frontend/src/: ApiClient.elm  Application.elm  ClientApi.elm  Common.elm  DatingApi.elm  GenHelpers.elm  ListUsersPage.elm  Main.elm  Models.elm  Routing.elm  Session.elm  Skeleton.elm  TokenHandling.elm  UserApi.elm
dating/frontend/style/: _colors.scss  _forms.scss  _grid.scss  _helpers.scss  _icons.scss  _messages.scss  _reset.scss  _scrollbars.scss  _shadows.scss  _skeleton.scss  _typography.scss  shadows.scss  style.scss
dating/frontend/tests/: ClientApiTests.elm  UserApiTests.elm
dating/matrixpy/: gradient.py
dating/nginx/: nginx.conf
dating/src/: API.hs  CollaborativeFiltering.hs  Database.hs  ElmCodeGen.hs  FrontendTypes.hs  Lib.hs  Schema.hs  SchemaEnums.hs  Transformer.hs  mongodbQueries.txt
dating/test/: Spec.hs
(+56 files in other folders)
