name:                dating
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/bargsteen/dating#readme
license:             BSD3
license-file:        LICENSE
author:              Kasper Dissing Bargsteen
maintainer:          kasper@bargsteen.com
copyright:           Kasper Dissing Bargsteen
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
                  API
                  Database
                  Schema
  build-depends:
      base >= 4.7 && < 5
    , wai
    , aeson
    , monad-logger
    , mtl
    , persistent
    , persistent-postgresql
    , persistent-template
    , servant
    , servant-client
    , servant-elm
    , servant-server
    , transformers
    , text
    , warp
    , hedis
    , bytestring
    , elm-export
    , wai-cors
  default-language:    Haskell2010

executable dating
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , dating
  default-language:    Haskell2010

test-suite dating-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:
      base
    , hspec
    , http-client
    , http-client-tls
    , monad-logger
    , mtl
    , servant-client
    , persistent-postgresql
    , dating
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/bargsteen/dating
